@@ -51,6 +51,10 @@ Notes:
 [float]
 ===== Chores
 
+- Disable knex instrumentation when not collecting span stack traces
+  (because there is no point). This is a performance improvement for
+  Knex usage in the default configuration.
+
 
 [[release-notes-3.38.0]]
 ==== 3.38.0 2022/08/11
